<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="appcoins_wallet">AppCoins Wallet</string>

  <string name="provide_wallet_creating_wallet_header">Creating wallet address&#8230;</string>
  <string name="processing_loading_title">Getting your entry ticket</string>
  <string name="finding_room_loading_title">Waiting for opponents</string>
  <string name="finding_room_name_loading_title">Waiting for opponents \nto join the</string>
  <string name="finding_room_loading_message">This may take a while…</string>
  <string name="refunded">Your money has been refunded.</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="buy_button">Buy</string>
  <string name="topup_button">Top Up</string>
  <string name="connection_error_body">It seems your\'re not connected to the Internet. Check your connection and try again!</string>
  <string name="playing_game_notification_title">Currently playing e-Skills</string>
  <string name="playing_game_notification_body">Getting game info…</string>
  <string name="finish_game_notification_title">Your e-Skills game has finished</string>
  <string name="won_game_notification_body">You won! Your wallet is now $%1$.2f heavier!</string>
  <string name="lost_game_notification_body">You lost… Better luck next time!</string>
  <string name="dismiss_button">Dismiss</string>

  <string name="location_not_available_title">e-Skills games are not available in your location</string>
  <string name="location_not_available_body">We\'re working hard to bring these to everyone, so come back soon!</string>

  <string name="e_skills_room_create_title">Create or join a room</string>
  <string name="e_skills_room_create_body">Create a new room and share it with your opponents or join an existing room.</string>
  <string name="e_skills_room_field">Your room name here…</string>
  <string name="e_skills_payment_title">Payment with</string>
  <string name="e_skills_payment_body">AppCoins Credits</string>
  <string name="copied_to_clipboard">Copied to the clipboard</string>

  <string name="processing_payment_title">Processing your payment</string>
  <string name="purchase_error_title">Oops, something went wrong.</string>

  <string name="purchase_eskills_sku">Entry ticket</string>

  <string name="shared_room_waiting">Waiting for opponents to join %s</string>

  <string name="rooted_device_blocked_body">Unfortunately, you cannot play e-Skills games with a rooted device."</string>

  <string name="update_wallet" translatable="false">Update wallet</string>

  <string name="top_up_needed_body">For security reasons, you need to make at least one top-up in your wallet to play e-Skills games.</string>
  
  <string name="not_enough_funds_body">You don\'t have enough funds! Please top up to buy the entry ticket.</string>
  
  <string name="error_message_local_payment_method_body">Local payment methods aren\'t accepted to purchase an entry fee. Please create a new wallet and top it up with a bank card or PayPal!</string>

  <string name="update_not_supported_title">Wallet version not supported!</string>
  <string name="update_not_supported_body">Update the AppCoins Wallet to the latest version.</string>
  <string name="update_button">Update</string>
  
  
  <!-- Refer a friend -->
  <string name="refer_a_friend_waiting_room_tooltip">You and the friends you invite will receive a $%s bonus. You can refer up to 5 friends, and they must be new users. The bonus will be credited in your wallet once they use your invitation code in their first e-Skills game.</string>
  <string name="refer_a_friend_first_time_header">Ready to show your skills?</string>
  <string name="refer_a_friend_first_time_body">Beat other players to get a prize in real money! Let\'s start with a practice game with no entry fee.</string>
  <string name="refer_a_friend_error_unavailable_body">This feature is currently unavailable.</string>
  <string name="refer_a_friend_error_invalid_code_body">Invalid code!</string>
  <string name="refer_a_friend_error_user_not_eligible_body">Only for new users!</string>
  <string name="refer_a_friend_first_time_tooltip">With our Referral Program you\'ll receive a $%s bonus when using your friends code. They\'ll also receive the same amount as bonus to be used on in-app purchases or e-Skills entry tickets.</string>
  <string name="refer_a_friend_waiting_room_title">Refer a Friend!</string>
  <string name="refer_a_friend_waiting_from_body">Get a bonus for each friend you invite.</string>
  <style name="start_button" translatable="false">Start</style>
</resources>
