<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/processing_loading"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/loading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/finding_room_loading_title"
            android:textColor="@color/black_87_alpha"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/loading_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/finding_room_loading_message"
            android:textColor="@color/grey_alpha_active_54"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="38dp"
            android:indeterminateDrawable="@drawable/gradient_progress"
            />

        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/cancel" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>